examples/test/testpolicy6254.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6254
  namespace: namespace71
spec:
  podSelector:
    matchLabels:
      key45: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value4
          key22: value43
      podSelector:
        matchLabels:
          key47: value6
          key19: value17
          key34: value20
